# db_encryption_poc

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
docker/: postgres.conf
ssn_app/: .gitignore  admin.py  crypto.py  models.py
ssn_app/management/commands/: benchmark_inserts.py  benchmark_queries.py  benchmark_range_queries.py  generate_applicant_data.py  generate_test_data.py
ssn_app/migrations/: 0001_initial.py
